Arreglo de puntuaciones y vistas de catalogo

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -26,7 +26,7 @@
                     <img src="/StorePhone/static/images/samj7.jpg">
                     <div class="caption">
                         <h3>Samsung Galaxy J7</h3>
-                        <p>Es el nuevo modelo de samsung J7</p>
+                        <p>Es el nuevo modelo de la linea Galaxy esta vez en su versi&oacuten 7.</p>
                         <p>
                             <a href="{{=URL(c="catalogo",f="index")}}" class="btn btn-primary">Comprar</a> <a href="{{=URL(c="catalogo",f="caracteristicas")}}" class="btn btn-default">Más Info.</a>
                         </p>
@@ -51,7 +51,7 @@
                 <div class="thumbnail">
                     <img src="/StorePhone/static/images/lgg.jpg">
                     <div class="caption">
-                        <h3>LG G      <br>           </br>            </h3>
+                        <h3>LG G</h3>
                         <p>Nuevo LG G ahora con mas memoria cache.</p>
                         <p>
                             <a href="#" class="btn btn-primary">Comprar</a> <a href="#" class="btn btn-default">Más Info.</a>
@@ -64,7 +64,7 @@
                 <div class="thumbnail">
                     <img src="/StorePhone/static/images/motox2016.jpg">
                     <div class="caption">
-                        <h3>Motorola Moto G (2016)</h3>
+                        <h3>Motorola Moto G </h3>
                         <p>Nuevo Motorola Moto G con nucleos optimizados.</p>
                         <p>
                             <a href="#" class="btn btn-primary">Comprar</a> <a href="#" class="btn btn-default">Más Info.</a>
