Arreglos de la tabla listado

--- a/views/ventas/listado_ventas.html
+++ b/views/ventas/listado_ventas.html
@@ -9,7 +9,9 @@ VENTAS
         <TH>PRODUCTO</TH>
         <TH>TOTAL</TH>
         <TH>TIPO DE PAGO</TH>
-        <TH>ESTADO</TH>
+        <TH>STOCK </TH>
+        <TH>ESTADO </TH>
+        <TH>ACCION</TH>
     </TR>
     <TR><TD> Lucas</TD>
         <TD>Noguera</TD>
@@ -17,5 +19,7 @@ VENTAS
         <TD>Samsung Galaxy J7</TD>
         <TD>$6500</TD>
         <TD>Debito</TD>
+        <td>12</td>
+        <TD>recibido</TD>
         <TD><a type="button" class="btn btn-success">CONFIRMAR PEDIDO</a> - <a type="button" class="btn btn-danger">CANCELAR PEDIDO</a></TD>
 </TABLE>
