arreglo vista pagina de inicio (default/index)

--- a/static/css/web2py.css
+++ b/static/css/web2py.css
@@ -311,3 +311,15 @@ li.w2p_grid_breadcrumb_elem {
 .web2py_console .form-control {width: 20%; display: inline;}
 .web2py_console #w2p_keywords {width: 50%;}
 .web2py_search_actions a, .web2py_console input[type=submit], .web2py_console input[type=button], .web2py_console button { padding: 6px 12px; }
+
+
+.btn:hover,
+a.noeffect img:hover {
+    transition: scale .5s;
+    transform: scale(1.05);
+}
+
+.btn,
+a.noeffect img {
+    transition: all .2s ease-in-out;
+}
