--- a/views/default/index.html
+++ b/views/default/index.html
@@ -23,52 +23,44 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="/StorePhone/static/images/samj7.jpg">
+                    <a class="noeffect" href="{{=URL(c="catalogo",f="index")}}" class="btn btn-primary">
+                        <img src="/StorePhone/static/images/samj7.jpg">
+                    </a>
                     <div class="caption">
                         <h3>Samsung Galaxy J7</h3>
-                        <p>Es el nuevo modelo de la linea Galaxy esta vez en su versi&oacuten 7.</p>
-                        <p>
-                            <a href="{{=URL(c="catalogo",f="index")}}" class="btn btn-primary">Comprar</a> <a href="{{=URL(c="catalogo",f="caracteristicas")}}" class="btn btn-default">Más Info.</a>
-                        </p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="/StorePhone/static/images/n1.jpg">
+                    <a class="noeffect">
+                        <img src="/StorePhone/static/images/n1.jpg">
+                    </a>
                     <div class="caption">
-                        <h3>MOTO G 3ra Gen</h3>
-                        <p>Nuevo motorola moto g 3ra Generacion.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Comprar</a> <a href="#" class="btn btn-default">Más Info.</a>
-                        </p>
-                    </div>
+                        <h3>MOTO G 3ra Generaci&oacuten</h3>
+                   </div>
                 </div>
             </div>
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="/StorePhone/static/images/lgg.jpg">
-                    <div class="caption">
+                    <a class="noeffect">
+                        <img src="/StorePhone/static/images/lgg.jpg">
+                    </a>
+                 <div class="caption">
                         <h3>LG G</h3>
-                        <p>Nuevo LG G ahora con mas memoria cache.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Comprar</a> <a href="#" class="btn btn-default">Más Info.</a>
-                        </p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="/StorePhone/static/images/motox2016.jpg">
+                    <a class="noeffect">
+                        <img src="/StorePhone/static/images/motox2016.jpg">
+                    </a>
                     <div class="caption">
                         <h3>Motorola Moto G </h3>
-                        <p>Nuevo Motorola Moto G con nucleos optimizados.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Comprar</a> <a href="#" class="btn btn-default">Más Info.</a>
-                        </p>
                     </div>
                 </div>
             </div>
