--- a/views/listado/articulos_por_1_nombre.html
+++ b/views/listado/articulos_por_1_nombre.html
@@ -3,7 +3,7 @@
 	<div class="row">
 
 		<section class="content">
-			<h1>Table Filter</h1>
+			<h1>Tabla de reporte</h1>
 			<div class="col-md-8 col-md-offset-2">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -26,11 +26,6 @@
 											</div>
 										</td>
 										<td>
-											<a href="javascript:;" class="star">
-												<i class="glyphicon glyphicon-star"></i>
-											</a>
-										</td>
-										<td>
 											<div class="media">
 												<a href="#" class="pull-left">
 													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
@@ -38,10 +33,10 @@
 												<div class="media-body">
 													<span class="media-meta pull-right">Febrero 13, 2016</span>
 													<h4 class="title">
-														Lorem Impsum
+														Sanz Daniel
 														<span class="pull-right pagado">(Pagado)</span>
 													</h4>
-													<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
+                                                    <p class="summary">Samsun galaxy J7 2016</p>
 												</div>
 											</div>
 										</td>
@@ -54,11 +49,6 @@
 											</div>
 										</td>
 										<td>
-											<a href="javascript:;" class="star">
-												<i class="glyphicon glyphicon-star"></i>
-											</a>
-										</td>
-										<td>
 											<div class="media">
 												<a href="#" class="pull-left">
 													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
@@ -66,10 +56,10 @@
 												<div class="media-body">
 													<span class="media-meta pull-right">Febrero 13, 2016</span>
 													<h4 class="title">
-														Lorem Impsum
+														Maria Gonzalez
 														<span class="pull-right pendiente">(Pendiente)</span>
 													</h4>
-													<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
+													<p class="summary">Motorola moto G 3ra Gen..</p>
 												</div>
 											</div>
 										</td>
@@ -82,11 +72,6 @@
 											</div>
 										</td>
 										<td>
-											<a href="javascript:;" class="star">
-												<i class="glyphicon glyphicon-star"></i>
-											</a>
-										</td>
-										<td>
 											<div class="media">
 												<a href="#" class="pull-left">
 													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
@@ -94,10 +79,10 @@
 												<div class="media-body">
 													<span class="media-meta pull-right">Febrero 13, 2016</span>
 													<h4 class="title">
-														Lorem Impsum
+														Coronel Lilian
 														<span class="pull-right cancelado">(Cancelado)</span>
 													</h4>
-													<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
+													<p class="summary">Samsum Galaxy S5.</p>
 												</div>
 											</div>
 										</td>
@@ -110,11 +95,6 @@
 											</div>
 										</td>
 										<td>
-											<a href="javascript:;" class="star star-checked">
-												<i class="glyphicon glyphicon-star"></i>
-											</a>
-										</td>
-										<td>
 											<div class="media">
 												<a href="#" class="pull-left">
 													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
@@ -122,10 +102,10 @@
 												<div class="media-body">
 													<span class="media-meta pull-right">Febrero 13, 2016</span>
 													<h4 class="title">
-														Lorem Impsum
+														Dominguez Oracio
 														<span class="pull-right pagado">(Pagado)</span>
 													</h4>
-													<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
+													<p class="summary">Motorola Moto X.</p>
 												</div>
 											</div>
 										</td>
@@ -138,11 +118,6 @@
 											</div>
 										</td>
 										<td>
-											<a href="javascript:;" class="star">
-												<i class="glyphicon glyphicon-star"></i>
-											</a>
-										</td>
-										<td>
 											<div class="media">
 												<a href="#" class="pull-left">
 													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
@@ -150,10 +125,10 @@
 												<div class="media-body">
 													<span class="media-meta pull-right">Febrero 13, 2016</span>
 													<h4 class="title">
-														Lorem Impsum
+														Arce Ignacio
 														<span class="pull-right pendiente">(Pendiente)</span>
 													</h4>
-													<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
+													<p class="summary">Samsung Galaxy A5.</p>
 												</div>
 											</div>
 										</td>
@@ -164,13 +139,11 @@
 					</div>
 				</div>
 				<div class="content-footer">
-					<p>
-						Page © - 2016 <br>
-						Powered By <a href="https://www.facebook.com/tavo.qiqe.lucero" target="_blank">TavoQiqe</a>
-					</p>
 				</div>
 			</div>
 		</section>
-		
 	</div>
 </div>
+
+
+ });
