Vista del listado de ventas - modificacion de demo

--- a/views/ventas/listado_ventas.html
+++ b/views/ventas/listado_ventas.html
@@ -20,6 +20,6 @@ VENTAS
         <TD>$6500</TD>
         <TD>Debito</TD>
         <td>12</td>
-        <TD>recibido</TD>
-        <TD><a type="button" class="btn btn-success">CONFIRMAR PEDIDO</a> - <a type="button" class="btn btn-danger">CANCELAR PEDIDO</a></TD>
+        <TD>pendientes - confirmado - despachado -recibido - rechazado</TD>
+        <TD>confirmar - despachar -rechazar</TD>
 </TABLE>
