--- a/views/listado/articulos_por_1_nombre.html
+++ b/views/listado/articulos_por_1_nombre.html
@@ -3,7 +3,7 @@
 	<div class="row">
 
 		<section class="content">
-			<h1>Tabla de reporte</h1>
+			<h1>Ventas </h1>
 			<div class="col-md-8 col-md-offset-2">
 				<div class="panel panel-default">
 					<div class="panel-body">
