subo boton mercado pago

--- a/views/listado/clientes_por_ciudad.html
+++ b/views/listado/clientes_por_ciudad.html
@@ -52,7 +52,7 @@
                 </tr>
         </thead>
         <tbody>
-                <tr class="clickable warning dropdown-deliverable" data-for="#details_1">
+                <tr class="clickable warning dropdown-deliverable" data-for="#details_2">
                     <td>Guerrero Viviana</td>
                     <td>Samsung galaxy A5</td>
                     <td>23, Abril, 2017</td>
@@ -68,12 +68,12 @@
                 <tr style="padding:0">
                     <td style="padding:0"></td>
                     <td colspan=2 style="padding:0px;">
-                        <div class="deliverable-infos" id="details_1">
-                            <table class="table table-condensed table-user-content" id="hidden_table_1">
+                        <div class="deliverable-infos" id="details_2">
+                            <table class="table table-condensed table-user-content" id="hidden_table_2">
                                 <tbody>
                                     <tr>
                                         <td>Fecha de compra :</td>
-                                        <td class="right-col">23 de Abril, 2017</td>
+                                        <td class="right-col">3 de junio, 2017</td>
                                     </tr>
                                     <tr>
                                         <td>Tipo de Pago :</td>
@@ -90,7 +90,10 @@
                     <td style="padding:0"></td>
                     <td style="padding:0"></td>
                 </tr>
-                <tr class="clickable warning dropdown-deliverable" data-for="#details_2">
+                </tr>
+            </thead>
+        <tbody>
+                <tr class="clickable warning dropdown-deliverable" data-for="#details_3">
                     <td>Tousedo Ruben</td>
                     <td>Motorola Moto G3</td>
                     <td>23, Abril 2017</td>
@@ -106,8 +109,8 @@
                 <tr style="padding:0">
                     <td style="padding:0"></td>
                     <td colspan=2 style="padding:0">
-                        <div class="deliverable-infos" id="details_2">
-                            <table class="table table-condensed table-user-content" id="hidden_table_2">
+                        <div class="deliverable-infos" id="details_3">
+                            <table class="table table-condensed table-user-content" id="hidden_table_3">
                                 <tbody>
                                     <tr>
                                         <td>Fecha de Compra:</td>
@@ -131,7 +134,7 @@
                 </tr>
         </thead>
         <tbody>
-                <tr class="clickable warning dropdown-deliverable" data-for="#details_1">
+                <tr class="clickable warning dropdown-deliverable" data-for="#details_4">
                     <td>Paz Juan</td>
                     <td>Samsung galaxy A5</td>
                     <td>23, Abril, 2017</td>
@@ -147,8 +150,8 @@
                 <tr style="padding:0">
                     <td style="padding:0"></td>
                     <td colspan=2 style="padding:0px;">
-                        <div class="deliverable-infos" id="details_1">
-                            <table class="table table-condensed table-user-content" id="hidden_table_1">
+                        <div class="deliverable-infos" id="details_4">
+                            <table class="table table-condensed table-user-content" id="hidden_table_4">
                                 <tbody>
                                     <tr>
                                         <td>Fecha de compra :</td>
