--- a/views/carrito/detalle.html
+++ b/views/carrito/detalle.html
@@ -75,7 +75,11 @@
                 <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                   <div class="input-group">
                     <span class="input-group-btn">
-                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="factura")}}">CONTINUAR</a>
+                        <a mp-mode="dftl" href="https://www.mercadopago.com/mla/checkout/start?pref_id=243812046-7c934f29-83d7-4f73-996f-a3680bf491f5" name="MP-payButton" class='blue-ar-l-rn-none'>Pagar</a>
+<script type="text/javascript">
+(function(){function $MPC_load(){window.$MPC_loaded !== true && (function(){var s = document.createElement("script");s.type = "text/javascript";s.async = true;s.src = document.location.protocol+"//secure.mlstatic.com/mptools/render.js";var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);window.$MPC_loaded = true;})();}window.$MPC_loaded !== true ? (window.attachEvent ?window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null;})();
+</script>
+                      <!--<a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="factura")}}">CONTINUAR</a> -->
                     </span>
                   </div>
                 </div>
