--- a/views/catalogo/index.html
+++ b/views/catalogo/index.html
@@ -6,6 +6,7 @@
               <div class="title_left">
                 <h3>Store Phone</h3>
               </div>
+
             <div class="clearfix"></div>
             <div class="row">
               <div class="col-md-12 col-sm-12 col-xs-12">
@@ -14,15 +15,15 @@
                     <hr>  
                     <div class="col-md-7 col-sm-7 col-xs-12">
                       <div class="product-image">
-                      {{=IMG(_src=URL("static","images/imagen.png"))}}
+                      {{=IMG( _src=URL(c="consultas", f="mostrar",args=[x.id]))}}
                       </div>
                     </div>
 
                     <div class="col-md-5 col-sm-5 col-xs-12" style="border:0px solid #e5e5e5;">
-                      <h3 class="prod_title">SAMSUNG</h3>
+                      <h3 class="prod_title">{{=x.marca}}</h3>
                       <div class="">
                         <h2 class="bg-success">
-                            <strong>CELULAR SAMSUNG J7</strong>
+                            <strong>{{=x.nombre}}</strong>
                         <h4>Colores Disponibles</h4> 
                         <ul class="list-inline prod_color">
                           <li>
@@ -33,7 +34,7 @@
                       <br>
                       <div class="">
                         <div class="product_price">
-                          <p class="text-success"> <h2>$ 6500</h2> </p>
+                          <p class="text-success"> <h2>{{=x.precio}}</h2> </p>
                           <br>
                         </div>
                       </div>
