actualizo controlador catalogo a ficha

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -23,7 +23,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <a class="noeffect" href="{{=URL(c="catalogo",f="index")}}" class="btn btn-primary">
+                    <a class="noeffect" href="{{=URL(c="ficha",f="index")}}" class="btn btn-primary">
                         <img src="/StorePhone/static/images/samj7.jpg">
                     </a>
                     <div class="caption">
