subo vista reporte de ventas

--- a/views/ficha/index.html
+++ b/views/ficha/index.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <div class="right_col" role="main" style="min-height: 1014px;">
 
           <div class="">
