--- a/views/listado/articulos_por_1_nombre.html
+++ b/views/listado/articulos_por_1_nombre.html
@@ -1,153 +1,66 @@
 {{extend 'plantilla.html'}}
-<div class="container">
-	<div class="row">
+<!-- Page Content -->
+    <div class="container">
 
-		<section class="content">
-<<<<<<< local
-			<h1>Ventas </h1>
-=======
-			<h1>Ventas</h1>
->>>>>>> other
-			<div class="col-md-8 col-md-offset-2">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<div class="pull-right">
-							<div class="btn-group">
-								<button type="button" class="btn btn-success btn-filter" data-target="pagado">Pagado</button>
-								<button type="button" class="btn btn-warning btn-filter" data-target="pendiente">Pendiente</button>
-								<button type="button" class="btn btn-danger btn-filter" data-target="cancelado">Cancelado</button>
-								<button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
-							</div>
-						</div>
-						<div class="table-container">
-							<table class="table table-filter">
-								<tbody>
-									<tr data-status="pagado">
-										<td>
-											<div class="ckbox">
-												<input type="checkbox" id="checkbox1">
-												<label for="checkbox1"></label>
-											</div>
-										</td>
-										<td>
-											<div class="media">
-												<a href="#" class="pull-left">
-													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-												</a>
-												<div class="media-body">
-													<span class="media-meta pull-right">Febrero 13, 2016</span>
-													<h4 class="title">
-														Sanz Daniel
-														<span class="pull-right pagado">(Pagado)</span>
-													</h4>
-                                                    <p class="summary">Samsun galaxy J7 2016</p>
-												</div>
-											</div>
-										</td>
-									</tr>
-									<tr data-status="pendiente">
-										<td>
-											<div class="ckbox">
-												<input type="checkbox" id="checkbox3">
-												<label for="checkbox3"></label>
-											</div>
-										</td>
-										<td>
-											<div class="media">
-												<a href="#" class="pull-left">
-													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-												</a>
-												<div class="media-body">
-													<span class="media-meta pull-right">Febrero 13, 2016</span>
-													<h4 class="title">
-														Maria Gonzalez
-														<span class="pull-right pendiente">(Pendiente)</span>
-													</h4>
-													<p class="summary">Motorola moto G 3ra Gen..</p>
-												</div>
-											</div>
-										</td>
-									</tr>
-									<tr data-status="cancelado">
-										<td>
-											<div class="ckbox">
-												<input type="checkbox" id="checkbox2">
-												<label for="checkbox2"></label>
-											</div>
-										</td>
-										<td>
-											<div class="media">
-												<a href="#" class="pull-left">
-													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-												</a>
-												<div class="media-body">
-													<span class="media-meta pull-right">Febrero 13, 2016</span>
-													<h4 class="title">
-														Coronel Lilian
-														<span class="pull-right cancelado">(Cancelado)</span>
-													</h4>
-													<p class="summary">Samsum Galaxy S5.</p>
-												</div>
-											</div>
-										</td>
-									</tr>
-									<tr data-status="pagado" class="selected">
-										<td>
-											<div class="ckbox">
-												<input type="checkbox" id="checkbox4" checked>
-												<label for="checkbox4"></label>
-											</div>
-										</td>
-										<td>
-											<div class="media">
-												<a href="#" class="pull-left">
-													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-												</a>
-												<div class="media-body">
-													<span class="media-meta pull-right">Febrero 13, 2016</span>
-													<h4 class="title">
-														Dominguez Oracio
-														<span class="pull-right pagado">(Pagado)</span>
-													</h4>
-													<p class="summary">Motorola Moto X.</p>
-												</div>
-											</div>
-										</td>
-									</tr>
-									<tr data-status="pendiente">
-										<td>
-											<div class="ckbox">
-												<input type="checkbox" id="checkbox5">
-												<label for="checkbox5"></label>
-											</div>
-										</td>
-										<td>
-											<div class="media">
-												<a href="#" class="pull-left">
-													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-												</a>
-												<div class="media-body">
-													<span class="media-meta pull-right">Febrero 13, 2016</span>
-													<h4 class="title">
-														Arce Ignacio
-														<span class="pull-right pendiente">(Pendiente)</span>
-													</h4>
-													<p class="summary">Samsung Galaxy A5.</p>
-												</div>
-											</div>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<div class="content-footer">
-				</div>
-			</div>
-		</section>
-	</div>
-</div>
+        <!-- Jumbotron Header -->
+        <header class="jumbotron hero-spacer">
+            <h1>Bienvenido a StorePhone!</h1>
+            <p>En este catalogo podra ver todos los equipos con los que contamos a la venta.<br>Recuerde que para comprar un producto debe registrarse en el sistema.</p>
+        </header>
 
+        <hr>
 
- });
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Ordenados por "mas relevantes"</h3>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Page Features -->
+        <div class="row text-center">
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <a class="noeffect" href="{{=URL(c="ficha",f="index")}}" class="btn btn-primary">
+                        <img src="/StorePhone/static/images/samj7.jpg">
+                    </a>
+                    <div class="caption">
+                        <h3>Samsung Galaxy J7</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <a class="noeffect">
+                        <img src="/StorePhone/static/images/n1.jpg">
+                    </a>
+                    <div class="caption">
+                        <h3>MOTO G 3ra Generaci&oacuten</h3>
+                   </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <a class="noeffect">
+                        <img src="/StorePhone/static/images/lgg.jpg">
+                    </a>
+                 <div class="caption">
+                        <h3>LG G</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <a class="noeffect">
+                        <img src="/StorePhone/static/images/motox2016.jpg">
+                    </a>
+                    <div class="caption">
+                        <h3>Motorola Moto G </h3>
+                    </div>
+                </div>
+            </div>
