--- a/views/ficha/index.html
+++ b/views/ficha/index.html
@@ -12,13 +12,13 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <hr>  
+                    <hr>
+                     {{for x in da:}}
                     <div class="col-md-7 col-sm-7 col-xs-12">
                       <div class="product-image">
                       {{=IMG( _src=URL(c="consultas", f="mostrar",args=[x.id]))}}
                       </div>
                     </div>
-
                     <div class="col-md-5 col-sm-5 col-xs-12" style="border:0px solid #e5e5e5;">
                       <h3 class="prod_title">{{=x.marca}}</h3>
                       <div class="">
@@ -37,7 +37,9 @@
                           <p class="text-success"> <h2>{{=x.precio}}</h2> </p>
                           <br>
                         </div>
+                        {{pass}}
                       </div>
+                        
 
                       <div class="">
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="caracteristicas")}}">CARACTERISTICAS</a>
