arreglo base de datos articulo

--- a/views/ficha/comparacion.html
+++ b/views/ficha/comparacion.html
@@ -9,14 +9,22 @@
                              {{=x.nombre}}   
                             </h2>
                                 <thead> 
-                                <tr>
-                                    <th> <h3>Procesador
-                                    </h3></th> 
-                                </tr>
                              </thead> 
                              <tbody> 
                                  <tr> <th>Procesador</th> 
-                                     <td>Octacore 1.6 ghz</td>
+                                     <td>{{=x.procesador}}</td>
+                                 </tr>
+                                 <tr> <th>Display</th> 
+                                     <td>{{=x.pantalla}}</td>
+                                 </tr>
+                                 <tr> <th>Memoria Ram</th> 
+                                     <td>{{=x.memoria_ram}}</td>
+                                 </tr>
+                                 <tr> <th>Camara Principal</th> 
+                                    <td>{{=x.camara_principal}}</td>
+                                 </tr>
+                                 <tr> <th>Camara Secundaria</th> 
+                                     <td>{{=x.camara_secundaria}}</td>
                                  </tr>
                               </tbody> 
                         </table> 
