Pantalla dinamica, en caracteristicas del producto)

--- a/views/ficha/index.html
+++ b/views/ficha/index.html
@@ -42,7 +42,7 @@
                         
 
                       <div class="">
-                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="caracteristicas")}}">CARACTERISTICAS</a>
+                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="ficha",f="caracteristicas", args=[x.id])}}">CARACTERISTICAS</a>
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="ficha",f="comparacion", args=[x.id])}}">COMPARAR</a>
                       </div>
                       <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index")}}">COMPRAR<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
