--- a/views/carrito/index.html
+++ b/views/carrito/index.html
@@ -1,4 +1,5 @@
 {{extend 'plantilla.html'}}
+{{=session["carrito"]}}
 <div class="right_col" role="main" style="min-height: 1014px;">
 
           <div class="">
@@ -26,23 +27,19 @@
               </div>
             </div>
           </div>
-        
-<table class="table table-hover">
+<table class="table table-hover" >
+    {{total = 0}}
+    {{for x in da:}}
+    {{total = total + x.precio}}
     <TR><TH>Producto</TH>
-        <TH>Cantidad</TH>
-        <TH>Disponibilidad</TH>
         <TH>Precio</TH>
-        <TH>Subtotal</TH>
+        <TH>Accion</TH>
     </TR>
-    <TR><TD>SAMSUNG GALAXY J7</TD>
-        <TD><label for="campo_numero_comprobante" class="col-sm-2 control-label"></label>
-            <div class="col-sm-2">
-                <input type="number" class="form-control" name="numero_comprobante" id="campo_numero_comprobante">
-            </div></TD>
-        <TD>Stock</TD>
-        <TD>$ 6500 </TD>
-        <TD>$ 6500 </TD>
+    <TR><TD>{{=x.nombre}}</TD>
+        <TD>{{=x.precio}}</TD>
+        <TD><a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="eliminar", args=[x.id])}}">ELIMINAR</a></TD>
     </TR>
+    {{pass}}
 </table>
 <br>
 <table class= "table table-hover">
@@ -50,7 +47,7 @@
                      <th></th>
                      <th></th>
                      <th> Subtotal : $ 6500 </th>
-                     <th> Total : $ 6500 </th>
+                     <th> Total : $ {{=total}} </th>
 </table>
 <div class="input-group">
                     <input class="form-control" placeholder="Ingrese Aqui su Codigo Postal..." type="text">
