--- a/views/ficha/index.html
+++ b/views/ficha/index.html
@@ -45,7 +45,7 @@
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="ficha",f="caracteristicas", args=[x.id])}}">CARACTERISTICAS</a>
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="ficha",f="comparacion", args=[x.id])}}">COMPARAR</a>
                       </div>
-                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index")}}">COMPRAR<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index", args=[x.id])}}">COMPRAR<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
                       <hr>
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="default",f="index")}}">VOLVER</a>
               </div>
