--- a/views/carrito/index.html
+++ b/views/carrito/index.html
@@ -59,7 +59,7 @@
                 <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                   <div class="input-group">
                     <span class="input-group-btn">
-                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="detalle")}}">FINALIZAR COMPRA</a>
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="detalle", args=[x.id])}}">FINALIZAR COMPRA</a>
                     </span>
                   </div>
                 </div>
